--- a/AppMusic/AppMusic.csproj
+++ b/AppMusic/AppMusic.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Entity\ErrorResponse.cs" />
     <Compile Include="Entity\Member.cs" />
     <Compile Include="Entity\Song.cs" />
+    <Compile Include="Entity\SongLocal.cs" />
     <Compile Include="Entity\TokenResponse.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -127,14 +128,57 @@
     <None Include="AppMusic_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Properties\Default.rd.xml" />
-    <Content Include="Assets\LockScreenLogo.scale-200.png" />
+    <Content Include="Assets\apple-music-retina.png" />
+    <Content Include="Assets\Assets.altform-unplated_targetsize-16.png" />
+    <Content Include="Assets\Assets.altform-unplated_targetsize-24.png" />
+    <Content Include="Assets\Assets.altform-unplated_targetsize-256.png" />
+    <Content Include="Assets\Assets.altform-unplated_targetsize-32.png" />
+    <Content Include="Assets\Assets.altform-unplated_targetsize-48.png" />
+    <Content Include="Assets\Assets.scale-100.png" />
+    <Content Include="Assets\Assets.scale-125.png" />
+    <Content Include="Assets\Assets.scale-150.png" />
+    <Content Include="Assets\Assets.scale-200.png" />
+    <Content Include="Assets\Assets.scale-400.png" />
+    <Content Include="Assets\Assets.targetsize-16.png" />
+    <Content Include="Assets\Assets.targetsize-24.png" />
+    <Content Include="Assets\Assets.targetsize-256.png" />
+    <Content Include="Assets\Assets.targetsize-32.png" />
+    <Content Include="Assets\Assets.targetsize-48.png" />
+    <Content Include="Assets\bg.jpg" />
+    <Content Include="Assets\Dog.jpg" />
+    <Content Include="Assets\groot.gif" />
+    <Content Include="Assets\LargeTile.scale-100.png" />
+    <Content Include="Assets\LargeTile.scale-125.png" />
+    <Content Include="Assets\LargeTile.scale-150.png" />
+    <Content Include="Assets\LargeTile.scale-200.png" />
+    <Content Include="Assets\LargeTile.scale-400.png" />
+    <Content Include="Assets\Logo.png" />
+    <Content Include="Assets\SmallTile.scale-100.png" />
+    <Content Include="Assets\SmallTile.scale-125.png" />
+    <Content Include="Assets\SmallTile.scale-150.png" />
+    <Content Include="Assets\SmallTile.scale-200.png" />
+    <Content Include="Assets\SmallTile.scale-400.png" />
+    <Content Include="Assets\SplashScreen.scale-100.png" />
+    <Content Include="Assets\SplashScreen.scale-125.png" />
+    <Content Include="Assets\SplashScreen.scale-150.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
+    <Content Include="Assets\SplashScreen.scale-400.png" />
+    <Content Include="Assets\Square150x150Logo.scale-100.png" />
+    <Content Include="Assets\Square150x150Logo.scale-125.png" />
+    <Content Include="Assets\Square150x150Logo.scale-150.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
+    <Content Include="Assets\Square150x150Logo.scale-400.png" />
+    <Content Include="Assets\StoreLogo.scale-100.png" />
+    <Content Include="Assets\StoreLogo.scale-125.png" />
+    <Content Include="Assets\StoreLogo.scale-150.png" />
+    <Content Include="Assets\StoreLogo.scale-200.png" />
+    <Content Include="Assets\StoreLogo.scale-400.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-100.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-125.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-150.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="Properties\Default.rd.xml" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
